Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS

{{$NEXT}}

  - Fix @INC to load the patched Dist::Zilla::Config::Slicer
  - Increased version to 0.033
  - Imported modules from Dist-Zilla-Config-Slicer-0.202 to inc/lib, fixed a bug to make Dist::Zilla::Config::Slicer work with plugins in inc and bumped version to 0.202001
  - Renamed Github repository to https://github.com/skirmess/dzil-inc

  - Skip TravisCI for perl < 5.14 (Dist::Zilla 6.0 needs Perl 5.14)

0.032  2018-02-04 20:06:17 UTC

  - .perlcriticrc file replaced with xt/author/perlcriticrc-code and xt/author/perlcriticrc-tests
  - Added 2018 to copyright year
  - perlcriticrc.local replaced with perlcriticrc-code.local and perlcriticrc-tests.local
  - xt/author/critic.t test replaced with xt/author/perlcritic-code.t and xt/author/perlcritic-tests.t

0.031  2017-10-31 22:10:13 UTC

  - Do not run xt/author/pod-spell.t if AUTOMATED_TESTING env variable is set
  - Enabled the has_abstract_in_pod kwalitee check
  - Removed CopyrightYearFromGit

0.030  2017-10-20 20:20:56 UTC

  - Make it actually work on OSX with TravisCI

0.029  2017-10-18 22:21:18 UTC

  - By default skip author tests on Perl 5.8

0.028  2017-10-18 22:12:09 UTC

  - Add a cache directory to the TravisCI config
  - Add OSX support to TravisCI config
  - Use a matrix config for TravisCI to selectively disable author tests for
    specific Perl versions

0.027  2017-10-16 22:10:39 UTC

  - Automatically create the .appveyor.yml file
  - Added plugin Git::FilePermissions
  - Added plugin Git::RequireUnixEOL

0.026  2017-10-14 21:26:47 UTC

  - Disable ValuesAndExpressions::ProhibitSingleArgArraySlice because
    it requires perl 5.12

0.025  2017-10-14 20:40:06 UTC

  - Add disabled policies to generated .perlcriticrc
  - Added many more Perl::Critic policies
  - Improved default configuration of Perl::Critic policies
  - Removed all 'no critic' comments from the source files
  - Replaced List::MoreUtils with List::SomeUtils
