@@ -10,6 +10,9 @@ env:
   global:
     - AUTOMATED_TESTING=1
 
+git:
+  submodules: false
+
 matrix:
   include:
     - perl: '5.14'
